MonetDB/src/mal/Tests/tst900.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2001, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## the multiplex code blocks. Testing syntax errors
#
#b:= new(lng,lng);
#x:= multiplex.+(b,b);
#d:= [+](b,c);
#a:= b [+] b;
	x := multiplex.+(b,b);	#2 unknown:void (x:any)(b:bat[lng,lng])(b:bat[lng,lng])
!ERROR: d:= [+](b,c);
!           ^<identifier> or <unary operator> expected
!ERROR: a:= b [+] b;
!             ^operator expected
!ERROR: multiplexType:string constant expected in main[2]
function Admin.main():int;	#0:void (main:int)
	b := mal.new(lng,lng);	#1:BAT (b:bat[lng,lng])(lng:lng)(lng:lng)
	x := multiplex.+(b,b);	#2:void (x:any)(b:bat[lng,lng])(b:bat[lng,lng])
	d;	#3:void (d:any)
	a := b;	#4:BAT (a:bat[lng,lng])(b:bat[lng,lng])
end function;	#5:void 
!ERROR: SyntaxError:Admin.main[0]:'Admin.main' contains errors

>